--- a/collection-es.html
+++ b/collection-es.html
@@ -88,7 +88,7 @@
             <div class="find-retailers">
                 <h3>Encuentra minoristas</h3>
                 <p>Descubre nuestra colección en tiendas cercanas a ti. Visita nuestro localizador de tiendas para encontrar puntos de venta que ofrezcan productos Shajú.</p>
-                <a href="store-locator.html" class="btn">Localizador de tiendas</a>
+                <a href="store-locator-es.html" class="btn">Localizador de tiendas</a>
             </div>  
             <div class="order-whatsapp">
                 <h3>Ordenar vía WhatsApp</h3>
@@ -99,7 +99,7 @@
             <div class="custom-text">
                 <h3>Pedidos personalizados</h3>
                 <p>¿Buscas algo único? Ofrecemos piezas hechas a medida según tus preferencias. Contáctanos para discutir tus ideas y requisitos.</p>
-                <a href="contact.html" class="btn">Consultar ahora</a>
+                <a href="contact-es.html" class="btn">Consultar ahora</a>
             </div>
         </section>
     </main>
