--- a/about-es.html
+++ b/about-es.html
@@ -128,10 +128,10 @@
                     </div>
                     <div class="slide fade">
                         <img src="./Images/waaier.jpg" alt="Abanico de chambira" loading="Lazy">
-                        <div class="slide-caption">Abanico hecho con fibra de huambe</div>
+                        <div class="slide-caption">Abanico hecho con fibra de huambe.</div>
                     </div>
                     <div class="slide fade">
-                        <img src="./Images/slippers.jpg" alt="Sandalias de chambira" loading="Lazy">
+                        <img src="./Images/Slippers.jpg" alt="Sandalias de chambira" loading="Lazy">
                         <div class="slide-caption">Sandalias hechas con chambira, semillas y caucho (resina del árbol de shiringa).</div>
                     </div>
 
