--- a/about-es.html
+++ b/about-es.html
@@ -19,7 +19,7 @@
                 <ul class="nav-links">
                     <li><a href="index-es.html">Inicio</a></li>
                     <li class="dropdown">
-                        <a href="about-es.html">Sobre Nosotros</a>
+                        <a href="about-es.html" class="active">Sobre Nosotros</a>
                         <div class="dropdown-content">
                             <a href="our-story-es.html">Nuestra Historia</a>
                             <a href="Crafted-with-devotion-es.html">Elaborado con devoción</a>
@@ -27,7 +27,7 @@
                     </li>
                     <li><a href="collection-es.html">Colección</a></li>
                     <li><a href="events-es.html">Eventos</a></li>
-                    <li><a href="contact-es.html" class="active">Contacto</a></li>
+                    <li><a href="contact-es.html">Contacto</a></li>
                 </ul>
             </nav>
     
