--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -38,15 +38,15 @@
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li class="dropdown">
-                        <a href="about.html">About</a>
+                        <a href="about.html" class="active">About</a>
                         <div class="dropdown-content">
                             <a href="our-story.html">Our Story</a>
-                            <a href="Crafted-with-devotion.html">Crafted with devotion</a>
+                            <a href="Crafted-with-devotion.html" class="active">Crafted with devotion</a>
                         </div>
                     </li>
                     <li><a href="collection.html">Collection</a></li>
                     <li><a href="events.html">Events</a></li>
-                    <li><a href="contact.html"class="active">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
     
