--- a/about-es.html
+++ b/about-es.html
@@ -131,7 +131,7 @@
                         <div class="slide-caption">Abanico hecho con fibra de huambe.</div>
                     </div>
                     <div class="slide fade">
-                        <img src="./Images/Slippers.jpg" alt="Sandalias de chambira" loading="Lazy">
+                        <img src="./Images/slippers-chambira.jpg" alt="Sandalias de chambira" loading="Lazy">
                         <div class="slide-caption">Sandalias hechas con chambira, semillas y caucho (resina del árbol de shiringa).</div>
                     </div>
 
