--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                         <div class="slide-caption">Hand fan made with huambe fiber</div>
                     </div>
                     <div class="slide fade">
-                        <img src="./Images/Slippers.jpg" alt="Slippers out of Chambira">
+                        <img src="./Images/slippers-chambira.jpg" alt="Slippers out of Chambira">
                         <div class="slide-caption">Flipflops made with chambira, seeds, and rubber (resin from the shiringa tree).</div>
                     </div>
 
