--- a/collection-es.html
+++ b/collection-es.html
@@ -25,9 +25,9 @@
                             <a href="Crafted-with-devotion-es.html">Elaborado con devoción</a>
                         </div>
                     </li>
-                    <li><a href="collection-es.html">Colección</a></li>
+                    <li><a href="collection-es.html" class="active">Colección</a></li>
                     <li><a href="events-es.html">Eventos</a></li>
-                    <li><a href="contact-es.html" class="active">Contacto</a></li>
+                    <li><a href="contact-es.html" >Contacto</a></li>
                 </ul>
             </nav>
     
