--- a/index-es.html
+++ b/index-es.html
@@ -137,7 +137,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 Shaju. Todos los derechos reservados.</p>
+            <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. Todos los derechos reservados.</p>
         </div>
     </footer>
     
