--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -72,7 +72,7 @@
                 <!-- flex box-->
                 <div class="ourdevotion">
                     <div class="image-ourdevotion">
-                        <img src="Images/OlgaChambira.jpg" class="olga-chambira" loading="Lazy">
+                        <img src="Images/OlgaChambira.jpg" class="olga-chambira" loading="lazy">
                     </div>
                     <div class="about-ourdevotion">
                         <p>Trabajamos de la mano con comunidades locales y personas que están reconstruyendo sus vidas después de haber estado privadas de libertad. Al enseñar métodos tradicionales de recolección y procesamiento de recursos naturales, no solo preservamos el patrimonio cultural y promovemos la sostenibilidad ambiental, sino que también ofrecemos empleo significativo y digno a quienes buscan una segunda oportunidad. Cada pieza creada a través de Shaju lleva consigo una historia de identidad, resiliencia y transformación.</p> 
@@ -100,7 +100,7 @@
                     <p>Junto a estos artesanos, ofrecemos una variedad de productos elaborados con materiales locales. Utilizamos materiales como la chambira y el huambe para asegurarnos de que nuestros productos reflejen el alma de la selva amazónica y contribuyan a mantener viva nuestra herencia cultural.</p>
                 </div>
                 <div class="image-communities">
-                    <img src="Images/CentroFuerte.jpeg" class="CentroFuerte" loading="Lazy">
+                    <img src="Images/CentroFuerte.jpeg" class="CentroFuerte" loading="lazy">
                 </div>
             </section>
     <div style="text-align: center">
@@ -118,7 +118,7 @@
                     <a href="https://loretorioamazonas.pe/" class="btn-secondary"> Visita el sitio web de Marca Loreto</a>
                 </div>
                 <div class="image-MarcaLoreto">
-                    <img src="Images/LoretoMarca.jpg" class="LoretoMarcaImage" loading="Lazy">
+                    <img src="Images/LoretoMarca.jpg" class="LoretoMarcaImage" loading="lazy">
                 </div>
             </section>
   </main>
