--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -72,7 +72,7 @@
                 <!-- flex box-->
                 <div class="ourdevotion">
                     <div class="image-ourdevotion">
-                        <img src="Images/OlgaChambira.jpg" class="olga-chambira" loading="Lazy">
+                        <img src="Images/OlgaChambira.jpg" class="olga-chambira" loading="lazy">
                     </div>
                     <div class="about-ourdevotion">
                         <p>We work hand in hand with local communities and individuals who are rebuilding their lives after incarceration. By teaching traditional methods of gathering and processing natural resources, we not only preserve cultural heritage and promote environmental sustainability, but also provide meaningful, dignified employment to those seeking a second chance. Every piece created through Shaju carries a story of identity, resilience, and transformation.</p> 
@@ -100,7 +100,7 @@
                     <p>Together with these craftsmen, we offer a variety of products produced from local materials. We use materials like chambira and huambe to make sure that our products reflect the soul of the Amazon Forest and help keeping our cultural heritage alive.</p>
                 </div>
                 <div class="image-communities">
-                    <img src="Images/CentroFuerte.jpeg" class="CentroFuerte" loading="Lazy">
+                    <img src="Images/CentroFuerte.jpeg" class="CentroFuerte" loading="lazy">
                 </div>
             </section>
     <div style="text-align: center">
@@ -118,7 +118,7 @@
                     <a href="https://loretorioamazonas.pe/" class="btn-secondary"> Visit the Marca Loreto Website</a>
                 </div>
                 <div class="image-MarcaLoreto">
-                    <img src="Images/LoretoMarca.jpg" class="LoretoMarcaImage" loading="Lazy">
+                    <img src="Images/LoretoMarca.jpg" class="LoretoMarcaImage" loading="lazy">
                 </div>
             </section>
   </main>
