--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <img src="Images/logotrans.png" alt="Shaju" class="hero-logo">
+                <img src="Images/logotrans.png" loading="lazy" alt="Shaju" class="hero-logo">
                 <p>Discover unique artisanal creations that tell a story of social & environmental responsibility</p>
                 <a href="collection.html" class="btn">Explore Collection</a>
             </div>
