--- a/index-es.html
+++ b/index-es.html
@@ -43,7 +43,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <img src="Images/logotrans.png" alt="Shaju" class="hero-logo">
+                <img src="Images/logotrans.png" loading="lazy" alt="Shaju" class="hero-logo">
                 <p>Descubre creaciones artesanales únicas que cuentan una historia de responsabilidad social y ambiental.</p>
                 <a href="collection.html" class="btn">Explora la colecciónn</a>
             </div>
