--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover Shaju’s social impact through partnerships with local communities, creating economic opportunities. Learn about its role in Marca Loreto.">
     <title>Crafted with devotion - Shajú</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
