--- a/contact-es.html
+++ b/contact-es.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Ponte en contacto con el equipo de Shaju. Encuentra los datos de contacto, la ubicación en el mapa y respuestas a preguntas frecuentes.">
     <title>Contáctanos - Shaju</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
