--- a/privacy-policy-es.html
+++ b/privacy-policy-es.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Consulta la política de privacidad de Shaju, que explica cómo se recopilan, utilizan y protegen los datos del usuario según las normativas de protección de datos.">
     <title>Shajú – Política de Privacidad</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
