--- a/store-locator-es.html
+++ b/store-locator-es.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre dónde comprar los productos sostenibles de Shaju. Consulta las ubicaciones en el mapa y encuentra puntos de venta cercanos fácilmente.">
     <title>Contáctanos - Shaju</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
