--- a/store-locator.html
+++ b/store-locator.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Find out where to shop Shaju’s sustainable products. View store locations on the map and discover nearby points of sale with ease.">
     <title>Contact Us - Shaju</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
