--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Review Shaju’s terms and conditions of service, including user rights, responsibilities, and appropriate use of the platform.">
   <title>Terms of Service – Shajú</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
