--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre el impacto social de Shaju mediante alianzas con comunidades locales que generan oportunidades económicas. Conoce su papel en Marca Loreto.">
     <title>Elaborado con devoción - Shajú</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
