--- a/collection-es.html
+++ b/collection-es.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Explora la colección completa de Shaju con productos sostenibles y artesanales, elaborados con cuidado y basados en la tradición local.">
     <title>Colección - Shaju</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
