--- a/index-es.html
+++ b/index-es.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre el propósito, la misión y los valores de Shaju, y cómo apoya a las comunidades locales y promueve la sostenibilidad a través de su trabajo.">
     <title>Shaju - Creaciones Artesanales</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
