--- a/legal-notice-es.html
+++ b/legal-notice-es.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Aviso legal que detalla el editor, la persona responsable, el proveedor de alojamiento y los derechos de propiedad intelectual relacionados con Shaju.">
   <title>Aviso Legal – Shajú</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
