--- a/legal-notice.html
+++ b/legal-notice.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Legal notice outlining the publisher, responsible party, hosting provider, and intellectual property rights related to Shaju.">
   <title>Legal Notice – Shajú</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
