--- a/our-story-es.html
+++ b/our-story-es.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nuestra Historia - Shaju</title>
+    <meta name="description" content="Descubre la misión, los valores fundamentales y la inspiradora historia de origen de Shaju, basada en comunidad, artesanía y sostenibilidad.">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
