--- a/terms-of-service-es.html
+++ b/terms-of-service-es.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Consulta los términos y condiciones de servicio de Shaju, incluyendo derechos del usuario, responsabilidades y uso adecuado de la plataforma.">
   <title>Términos de Servicio – Shajú</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
