--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -101,7 +101,7 @@
                     <p>Junto a estos artesanos, ofrecemos una variedad de productos elaborados con materiales locales. Utilizamos materiales como la chambira y el huambe para asegurarnos de que nuestros productos reflejen el alma de la selva amazónica y contribuyan a mantener viva nuestra herencia cultural.</p>
                 </div>
                 <div class="image-communities">
-                    <img src="Images/CentroFuerte.jpeg" class="CentroFuerte" loading="lazy">
+                    <img src="Images/CentroFuerte.jpg" class="CentroFuerte" loading="lazy">
                 </div>
             </section>
     <div style="text-align: center">
