--- a/our-story-es.html
+++ b/our-story-es.html
@@ -120,7 +120,7 @@
                     <div class="slide-caption">Abanico hecho a mano de fibra de chambira.</div>
                 </div>
                 <div class="slide">
-                    <img src="./Images/slippers.jpg" loading="lazy" alt="about-image">
+                    <img src="./Images/slippers-chambira.jpg" loading="lazy" alt="about-image">
                     <div class="slide-caption">Sandalias hechas de fibra de chambira.</div>
                 </div>
                 <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
