--- a/our-story.html
+++ b/our-story.html
@@ -131,7 +131,7 @@
                         <div class="slide-caption">Hand fan made with huambe fiber</div>
                     </div>
                     <div class="slide fade">
-                        <img src="./Images/slippers.jpg" loading="lazy" alt="Slippers out of Chambira">
+                        <img src="./Images/slippers-chambira.jpg" loading="lazy" alt="Slippers out of Chambira">
                         <div class="slide-caption">Flipflops made with chambira, seeds, and rubber (resin from the shiringa tree).</div>
                     </div>
                 </div>
