--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -31,7 +31,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Logo Shaju" class="logo-image">
+            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" loading="lazy" alt="Logo Shaju" class="logo-image">
         </div>
         
         <div class="header-right">
@@ -126,7 +126,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Logo Shaju" class="footer-logo-image">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" loading="lazy" alt="Logo Shaju" class="footer-logo-image">
                 <p>Hecho con pasión para generar un impacto</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
