--- a/Crafted-with-devotion.html
+++ b/Crafted-with-devotion.html
@@ -32,7 +32,7 @@
 <body>
     <header>
         <div class="logo-container">
-            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="logo-image">
+            <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" loading="lazy" alt="Shaju Logo" class="logo-image">
         </div>
         
         <div class="header-right">
@@ -126,7 +126,7 @@
                     <p>Jairo also showed us how the latex is dyed and applied to create rubberized fabric, a material commonly featured in Shajú’s products. His knowledge and energy made this experience both educational and unforgettable.</p>
                   </div>
                   <div class="community-image">
-                    <img src="Images/Chambira.jpg" alt="Chambira" class="community-image">
+                    <img src="Images/Chambira.jpg" loading="lazy" alt="Chambira" class="community-image">
                   </div>
                 </div>
               </section>
@@ -155,7 +155,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" loading="lazy" alt="Shaju Logo" class="footer-logo-image">
                 <p>Made with passion to create impact.</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
