--- a/legal-notice.html
+++ b/legal-notice.html
@@ -38,7 +38,7 @@
   <header>
     <div class="logo-container">
       <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg"
-           alt="Shajú Logo" class="logo-image">
+           loading="lazy" alt="Shajú Logo" class="logo-image">
     </div>
     <div class="header-right">
       <nav class="main-nav">
@@ -114,7 +114,7 @@
   <footer>
         <div class="footer-content">
             <div class="footer-logo">
-                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" alt="Shaju Logo" class="footer-logo-image">
+                <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" loading="lazy" alt="Shaju Logo" class="footer-logo-image">
                 <p>Made with passion to create impact</p>
                 <div class="social-icons">
                     <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
