all rights reserved.

--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. All Rights Reserved.</p>
+            <p>&copy; <span id="current-year"></span> SHAJU INVERSIONES EIRL. All Rights Reserved.</p>
         </div>
     </footer>
     <script src="script.js"></script>
