--- a/events.html
+++ b/events.html
@@ -37,6 +37,11 @@
           <option value="es">Español</option>
         </select>
       </div>
+      <div class="nav-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </header>
 
@@ -106,7 +111,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. All Rights Reserved.</p>
+        <p>&copy; <span id="current-year"></span> SHAJU INVERSIONES EIRL. All Rights Reserved.</p>
     </div>
   </footer>
   
