--- a/legal-notice-es.html
+++ b/legal-notice-es.html
@@ -82,7 +82,7 @@
       <p><em>Última actualización: 28 de julio de 2025</em></p>
 
       <h2>1. Editor</h2>
-      <p><strong>SHAJU INVESTMENTS EIRL</strong><br>
+      <p><strong>SHAJU INVERSIONES EIRL.</strong><br>
       Calle Morona 586, Iquitos 16001<br>
       Registrada en el Registro Mercantil de Lima, RUC 20606588110</p>
 
@@ -97,13 +97,13 @@
       <a href="https://docs.github.com/es/site-policy/privacy-policies/github-privacy-statement" target="_blank">Política de privacidad de GitHub</a></p>
 
       <h2>4. Propiedad Intelectual</h2>
-      <p>Todo el contenido de este Sitio —incluyendo textos, imágenes, logotipos, diseños y código— es propiedad o está licenciado por SHAJU INVESTMENTS EIRL y está protegido por leyes internacionales de derechos de autor y marcas registradas. Se prohíbe el uso, reproducción o distribución no autorizados.</p>
+      <p>Todo el contenido de este Sitio —incluyendo textos, imágenes, logotipos, diseños y código— es propiedad o está licenciado por SHAJU INVERSIONES EIRL. y está protegido por leyes internacionales de derechos de autor y marcas registradas. Se prohíbe el uso, reproducción o distribución no autorizados.</p>
 
       <h2>5. Descargo de responsabilidad</h2>
-      <p>La información en este Sitio se proporciona “tal cual” con fines exclusivamente informativos. SHAJU INVESTMENTS EIRL no ofrece garantías, expresas ni implícitas, sobre su exactitud o integridad.</p>
+      <p>La información en este Sitio se proporciona “tal cual” con fines exclusivamente informativos. SHAJU INVERSIONES EIRL. no ofrece garantías, expresas ni implícitas, sobre su exactitud o integridad.</p>
 
       <h2>6. Limitación de responsabilidad</h2>
-      <p>SHAJU INVESTMENTS EIRL no será responsable en ningún caso por daños indirectos, incidentales o consecuentes que surjan del uso del Sitio o de la confianza en su contenido.</p>
+      <p>SHAJU INVERSIONES EIRL. no será responsable en ningún caso por daños indirectos, incidentales o consecuentes que surjan del uso del Sitio o de la confianza en su contenido.</p>
 
       <h2>7. Legislación aplicable y jurisdicción</h2>
       <p>Estos términos se rigen por las leyes de la República del Perú. Cualquier disputa estará sujeta a la jurisdicción exclusiva de los tribunales peruanos.</p>
@@ -154,7 +154,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. Todos los derechos reservados.</p>
+            <p>&copy; <span id="current-year"></span> SHAJU INVERSIONES EIRL. Todos los derechos reservados.</p>
         </div>
     </footer>
     <script src="script.js"></script>
