--- a/legal-notice.html
+++ b/legal-notice.html
@@ -77,7 +77,7 @@
       <p><em>Last updated: July 28, 2025</em></p>
 
       <h2>1. Publisher</h2>
-      <p><strong>SHAJU INVESTMENTS EIRL</strong><br>
+      <p><strong>SHAJU INVERSIONES EIRL.</strong><br>
       Calle Morona 586, Iquitos 16001<br>
       Registered in the Commercial Registry of Lima, RUC 20606588110</p>
 
@@ -93,13 +93,13 @@
 
 
       <h2>4. Intellectual Property</h2>
-      <p>All content on this Site—including text, images, logos, designs, and code—is owned or licensed by SHAJU INVESTMENTS EIRL and protected by international copyright and trademark laws. Unauthorized use, reproduction, or distribution is prohibited.</p>
+      <p>All content on this Site—including text, images, logos, designs, and code—is owned or licensed by SHAJU INVERSIONES EIRL. and protected by international copyright and trademark laws. Unauthorized use, reproduction, or distribution is prohibited.</p>
 
       <h2>5. Disclaimer</h2>
-      <p>The information on this Site is provided “as is” for general informational purposes only. SHAJU INVESTMENTS EIRL makes no warranties, express or implied, regarding accuracy or completeness.</p>
+      <p>The information on this Site is provided “as is” for general informational purposes only. SHAJU INVERSIONES EIRL. makes no warranties, express or implied, regarding accuracy or completeness.</p>
 
       <h2>6. Limitation of Liability</h2>
-      <p>In no event shall SHAJU INVESTMENTS EIRL be liable for any indirect, incidental, or consequential damages arising from your use of the Site or reliance on its content.</p>
+      <p>In no event shall SHAJU INVERSIONES EIRL. be liable for any indirect, incidental, or consequential damages arising from your use of the Site or reliance on its content.</p>
 
       <h2>7. Applicable Law & Jurisdiction</h2>
       <p>These terms are governed by the laws of the Republic of Peru. Any dispute shall be subject to the exclusive jurisdiction of the courts of Peru.</p>
@@ -152,7 +152,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. All Rights Reserved.</p>
+            <p>&copy; <span id="current-year"></span> SHAJU INVERSIONES EIRL. All Rights Reserved.</p>
         </div>
     </footer>
 
