--- a/contact-es.html
+++ b/contact-es.html
@@ -207,7 +207,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. Todos los derechos reservados.</p>
+            <p>&copy; <span id="current-year"></span> SHAJU INVERSIONES EIRL. Todos los derechos reservados.</p>
         </div>
     </footer>
 
