--- a/index-es.html
+++ b/index-es.html
@@ -38,6 +38,11 @@
           <option value="es"selected>Español</option>
         </select>
       </div>
+        <div class="nav-toggle">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
   </header>
 
@@ -138,7 +143,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. Todos los derechos reservados.</p>
+            <p>&copy; <span id="current-year"></span> SHAJU INVERSIONES EIRL. Todos los derechos reservados.</p>
         </div>
     </footer>
     
