--- a/our-story-es.html
+++ b/our-story-es.html
@@ -176,7 +176,7 @@
             </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; <span id="current-year"></span> SHAJU INVESTMENTS EIRL. Todos los derechos reservados.</p>
+        <p>&copy; <span id="current-year"></span> SHAJU INVERSIONES EIRL. Todos los derechos reservados.</p>
     </div>
 </footer>
 <script src="script.js"></script>
