--- a/index-es.html
+++ b/index-es.html
@@ -51,7 +51,7 @@
             <div class="hero-content">
                 <img src="Images/logotrans.png" loading="lazy" alt="Shaju" class="hero-logo">
                 <p>Descubre creaciones artesanales únicas que cuentan una historia de responsabilidad social y ambiental.</p>
-                <a href="collection.html" class="btn">Explora la colecciónn</a>
+                <a href="collection-es.html" class="btn">Explora la colecciónn</a>
             </div>
         </section>
 
