--- a/collection-es.html
+++ b/collection-es.html
@@ -111,7 +111,7 @@
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" loading="lazy" alt="Logo Shaju" class="footer-logo-image">
                 <p>Hecho con pasión para generar un impacto</p>
                 <div class="social-icons">
-                    <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
+                    <a href="https://www.instagram.com/shaju.artesanias/" target="_blank" class="social-icon">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
