--- a/contact.html
+++ b/contact.html
@@ -140,7 +140,7 @@
                 <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/logo.png-IkmbjchCYB5E5rfVFkBDm0DAoo9PPD.jpeg" loading="lazy" alt="Shaju Logo" class="footer-logo-image">
                 <p>Made with passion to create impact.</p>
                 <div class="social-icons">
-                    <a href="https://instagram.com/shaju.artesania" target="_blank" class="social-icon">
+                    <a href="https://www.instagram.com/shaju.artesanias/" target="_blank" class="social-icon">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a href="https://facebook.com/shaju.artesania" target="_blank" class="social-icon">
