--- a/Crafted-with-devotion-es.html
+++ b/Crafted-with-devotion-es.html
@@ -209,6 +209,9 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
      <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 <script>
