--- a/about-es.html
+++ b/about-es.html
@@ -200,6 +200,9 @@
         <!-- Scripts -->
         <script src="script.js"></script>
         <script>
+        document.getElementById("current-year").textContent = new Date().getFullYear();
+        </script>
+        <script>
             // Slideshow functionality
             let slideIndex = 1;
             showSlides(slideIndex);
