--- a/collection-es.html
+++ b/collection-es.html
@@ -152,6 +152,9 @@
     
     <script src="script.js"></script>
     <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
+    <script>
                 // slideshow state
         let slideshowInterval = null;
         let slideshowImgEl    = null;
