--- a/index-es.html
+++ b/index-es.html
@@ -149,6 +149,9 @@
     
     <script src="script.js"></script>
     <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
+    <script>
         const SHEET_ID = '1F4Ei3R4v4vrkNjczs0CodsSp6xp9pgkOpw_d5q0b6nA';
         const API_KEY = 'AIzaSyCH4dn81XRgUP7KjkTUyANicwUr0bvgiSM';
         const SHEET_RANGE = 'English!A2:I3';
