--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -162,5 +162,8 @@
     </footer>
 
   <script src="script.js"></script>
+  <script>
+  document.getElementById("current-year").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
