--- a/about.html
+++ b/about.html
@@ -199,6 +199,9 @@
         <!-- Scripts -->
         <script src="script.js"></script>
         <script>
+        document.getElementById("current-year").textContent = new Date().getFullYear();
+        </script>
+        <script>
             // Slideshow functionality
             let slideIndex = 1;
             showSlides(slideIndex);
