--- a/collection.html
+++ b/collection.html
@@ -153,6 +153,9 @@
     
     <script src="script.js"></script>
     <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
+    <script>
         // slideshow state
         let slideshowInterval = null;
         let slideshowImgEl    = null;
