--- a/contact.html
+++ b/contact.html
@@ -179,5 +179,8 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
