--- a/legal-notice-es.html
+++ b/legal-notice-es.html
@@ -158,7 +158,9 @@
         </div>
     </footer>
     <script src="script.js"></script>
-
+    <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
 </body>
 </html>
 
