--- a/our-story-es.html
+++ b/our-story-es.html
@@ -181,6 +181,9 @@
 </footer>
 <script src="script.js"></script>
 <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+</script>
+<script>
     // Slideshow functionality
     let slideIndex = 1;
     showSlides(slideIndex);
