--- a/our-story.html
+++ b/our-story.html
@@ -196,9 +196,12 @@
     </footer>
     
         <!-- Scripts -->
+         <script>
+         document.getElementById("current-year").textContent = new Date().getFullYear();
+        </script>
         <script src="script.js"></script>
         <script>
-            // Slideshow functionality
+         // Slideshow functionality
             let slideIndex = 1;
             showSlides(slideIndex);
     
