--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -196,4 +196,7 @@
         </div>
     </footer>
     <script src="script.js"></script>
+    <script>
+    document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
 </body>
