--- a/terms-of-service-es.html
+++ b/terms-of-service-es.html
@@ -163,6 +163,8 @@
         </div>
     </footer>
     <script src="script.js"></script>
-
+    <script>
+  document.getElementById("current-year").textContent = new Date().getFullYear();
+</script>
 </body>
 </html>
