--- a/collection-es.html
+++ b/collection-es.html
@@ -287,7 +287,7 @@
                 <img src="${properImageUrl}" alt="${item.título}" class="product-image">
                 <div class="item-details">
                     <p class="item-title">${item.título}</p>
-                    <p class="item-price">${item.precio ? `$${item.precio}` : ''}</p>
+                    <p class="item-price">${item.precio ? `S/${item.precio}` : ''}</p>
                 </div>
                 <div class="item-extra">
                     <p><strong>Description:</strong> ${item.descripcíon2}</p>
