--- a/collection.html
+++ b/collection.html
@@ -289,7 +289,7 @@
                 <img src="${properImageUrl}" alt="${item.title}" class="product-image">
                 <div class="item-details">
                     <p class="item-title">${item.title}</p>
-                    <p class="item-price">${item.price ? `$${item.price}` : ''}</p>
+                    <p class="item-price">${item.price ? `S/${item.price}` : ''}</p>
                 </div>
                 <div class="item-extra">
                     <p><strong>Description:</strong> ${item.description2}</p>
