--- a/events-es.html
+++ b/events-es.html
@@ -125,7 +125,7 @@
   <script>
     const SHEET_ID = '1F4Ei3R4v4vrkNjczs0CodsSp6xp9pgkOpw_d5q0b6nA';
     const API_KEY = 'AIzaSyCH4dn81XRgUP7KjkTUyANicwUr0bvgiSM';
-    const SHEET_RANGE = 'Español!A2:I';
+    const SHEET_RANGE = 'Español!A2:H';
 
     const eventsGrid = document.getElementById('events-grid');
     const loadingIndicator = document.getElementById('loading-indicator');
@@ -133,13 +133,6 @@
     const searchBox = document.getElementById('search-box');
 
     let eventsData = [];
-
-    function getDriveImage(url) {
-      if (!url) return '';
-      const match = url.match(/\/d\/(.*?)\//) || url.match(/id=([^&]+)/);
-      if (match && match[1]) return `https://drive.google.com/uc?export=view&id=${match[1]}`;
-      return url.includes('uc?export=view&id=') ? url : url;
-    }
 
     async function fetchEvents() {
       loadingIndicator.style.display = 'block';
@@ -170,8 +163,7 @@
       }
 
       data.forEach(row => {
-        const [id, título, descripcíon, mes, dia, hora, lugar, precio, ImagenURL] = row;
-        const imgSrc = getDriveImage(ImagenURL) || 'https://via.placeholder.com/400x200?text=No+Image';
+        const [id, título, descripcíon, mes, dia, hora, lugar, precio] = row;
 
         const card = document.createElement('div');
         card.className = 'event-card';
@@ -185,7 +177,7 @@
             <div class="event-title">${título || 'Untitled Event'}</div>
             <div class="event-time"> <b>Time: </b>${hora|| 'Time TBD'}</div>
             <div class="event-location"> <b>Location: </b>${ lugar || 'Location TBD'}</div>
-            <div class="event-price"> <b>Price: </b>S/ ${precio|| 'Price TBD'}</div>
+            <div class="event-price"> <b>Price: </b>S/${precio|| 'Price TBD'}</div>
             <div class="event-description">${descripcíon || ''}</div>
             </div>
           </div>
